# mult_agent_code

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.agent/: policies.json  project.json
.agent/context/: root_snapshot.json
.agent/tasks/: backlog.json
.github/workflows/: verify.yml
benchmarks/: README.md
benchmarks/compact_handoff/: benchmark.json
benchmarks/failing_tests_project/: benchmark.json
benchmarks/file_renamer/: benchmark.json
benchmarks/markdown_kb/: benchmark.json
benchmarks/password_tool/: benchmark.json
docs/en/: ARCHITECTURE.md  COST_SECURITY_RISK.md  DATA_MODEL.md  DELIVERY_PLAN.md  PRODUCT_SPEC.md  QUALITY_AND_EVALUATION.md  README.md  REAL_MODEL_ACCEPTANCE.md  RUNTIME_COMMANDS.md
docs/zh/: ARCHITECTURE.md  COST_SECURITY_RISK.md  DATA_MODEL.md  DELIVERY_PLAN.md  DEVELOPMENT.md  MODEL_PROVIDER_SPEC.md  PRODUCT_SPEC.md  QUALITY_AND_EVALUATION.md  README.md  REAL_MODEL_ACCEPTANCE.md  RUNTIME_COMMANDS.md
schemas/: acceptance_failure_evidence.schema.json  acceptance_report.schema.json  artifact.schema.json  brainstorm_report.schema.json  context_snapshot.schema.json  cost_report.schema.json  current_run.schema.json  current_session.schema.json  decision_point.schema.json  eval_report.schema.json  event.schema.json  execution_action.schema.json  experiment.schema.json  file_backup_manifest.schema.json  goal_spec.schema.json  handoff_package.schema.json  memory_entry.schema.json  model_call.schema.json  model_failure_report.schema.json  policy_config.schema.json  project_config.schema.json  research_report.schema.json  run.schema.json  task.schema.json  task_board.schema.json  task_failure_evidence.schema.json  task_plan_eval.schema.json  tool_call.schema.json  verification_summary.schema.json
scripts/: real_model_acceptance.ps1  real_model_acceptance.py  real_model_smoke.ps1  real_model_smoke.py  run_benchmarks.py  verify.ps1  verify.sh  write_verification_summary.py
src/agent_runtime/: __init__.py  cli.py
templates/: AGENTS.md  policies.default.json
tests/integration/: test_acceptance_command.py  test_cli_e2e.py  (+21 more)
(+122 files in other folders)
