[project]
name = "agent-runtime"
version = "0.1.0"
description = "Local-first multi-agent autonomous development runtime"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy"
]
future = [
  "typer",
  "pydantic",
  "pydantic-settings",
  "jsonschema",
  "rich",
  "httpx"
]

[project.scripts]
agent = "agent_runtime.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
