[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "0.1.0"
description = "Local-first multi-agent autonomous development runtime"
requires-python = ">=3.11"
dependencies = [
  "tzdata; platform_system == 'Windows'"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.12",
  "mypy==1.20.2"
]
future = [
  "typer",
  "pydantic",
  "pydantic-settings",
  "jsonschema",
  "rich",
  "httpx"
]

[project.scripts]
agent = "agent_runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
